<resources>
    <string name="app_name">随心记</string>
    <string name="edit_name">便签编辑</string>
    <string name="main_menu_add">添加</string>
    <string name="main_menu_delete">数据库清空</string>
    <string name="main_menu_setting">设置</string>
    <string name="title_activity_settings">设置</string>
    <string name="pref_header_general">基本设置</string>
    <string name="pref_header_font">字体</string>
    <string name="pref_title_new_message_notifications">新消息通知</string>
    <string name="pref_title_ringtone">铃声</string>
    <string name="pref_ringtone_silent">静音</string>
    <string name="pref_title_vibrate">震动</string>
    <string name="appwidget_text">例子</string>
    <string name="add_widget">添加组件</string>
    <string name="pref_header_general_summary">应用通用设置</string>
    <string name="pref_header_font_summary">字体大小设置</string>
    <string name="pref_font_time_size">时间字体大小</string>
    <string name="pref_font_content_size">内容字体大小</string>
    <string name="pref_font_title_size">标题字体大小</string>
    <string name="pref_header_backup_summary">以PDF格式导出备份</string>
    <string name="pref_header_backup">备份</string>
    <string name="save_backup">保存备份至…</string>
    <string name="main_menu_about">关于应用</string>
    <string name="intro_done">立即进入</string>
    <string name="intro_skip">跳过…</string>
    <string name="intro1_title">欢迎来到随心记</string>
    <string name="intro1_desc">在这里你可以记录你的心情</string>
    <string name="intro2_title">在这里你可以随性记录，并且可以设置提醒的时间，本应用将会直观的显示出剩余的时间，当然您也可以将选中的便签放置于桌面上提醒您</string>
    <string name="intro3_title">开启你的随心记之旅吧</string>
    <string name="intro3_desc">享受生活，享受随心记带来的便捷</string>
    <string name="intro">欢迎使用</string>
    <string name="fa_star_half_o" translatable="false">&#xf123;</string>
    <string name="fa_recycle" translatable="false">&#xf014;</string>
    <string name="empty_note_text">点击右下角添加按钮添加你的便笺吧</string>
    <string name="empty_bin_note_text">回收站空空如也~</string>
    <string name="app_about">
        APP简介:\n   多功能选择的记事本\n   精美的画面设计\n   简约的设计理念\n   便捷的操作方式\n开发团队:\n   软件工程团队68组\n
    </string>
    <string name="TextView_help">回收站：删除的日记和计划可放入回收站。通过点击右上角的菜单，可进入回收站。在回收站里，你可以恢复删除的项目，也可以将它彻底删除。\n
        备份和导出：你可以在设置里以PDF导出文本的方式把日记保存到你的手机里，通过保存路径查看文件的保存位置。\n
        添加到桌面：把一些重要的日记直接放到桌面上，可通过点击添加到桌面选项实现此功能。</string>
    <string name="add_to_desktop">添加到桌面</string>
    <string name="add_alarm">添加提醒</string>
    <string name="recycle_bin">回收站</string>
    <string name="main_menu_help">帮助</string>
    <string name="edit_title_hint">请输入便笺标题</string>
    <string name="edit_content_hint">请输入便笺内容</string>
    <string name="ExitTip">应用已退出！</string>
    <string name="NoExitTip">重复此动作将退出应用！</string>
    <string name="export_success">已成功导出！</string>
    <string name="find_content">请请输入需要查找的内容！</string>
    <string name="main_menu_exit">退出应用</string>
    <string name="saving_backup">正在保存.........</string>
    <string name="NullPointerException">对象不存在！</string>
    <string name="lastUpdate">- 最后更改于</string>
    <string name="mButton_save">保存</string>
    <string name="mButton_yes">确定</string>
    <string name="mButton_no">取消</string>
    <string name="edit_time_time">添加您的指定提醒时间</string>
    <string name="setAlarm_error">您所设置的提醒时间已过时，请重试！</string>
    <string name="textview">TextView</string>
    <string name="switch_on">打开</string>
    <string name="switch_off">关闭</string>
    <string name="save_success">已成功添加一条便笺！</string>
    <string name="Refresh">刷新已完成！</string>
    <string name="Notes_delete_tip">删除便笺</string>
    <string name="Notes_delete">你确定要删除这条便笺？</string>
    <string name="Time">时间轴</string>
    <string name="write_note">写日记</string>
    <string name="alarm_plan">定计划</string>
    <string name="empty_note_no_save">空便签不会被保存！</string>
    <string name="settings_date_time">设置指定提醒日期与时间</string>
</resources>
