<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/recycle_bin"
        android:icon="@drawable/ic_recycle_24dp"
        android:title="@string/recycle_bin"
        app:showAsAction="withText" />
    <group
        android:id="@+id/main_menu_debug"
        android:visible="false">
        <item
            android:id="@+id/main_menu_add"
            android:icon="@android:drawable/ic_input_add"
            android:title="添加[开发用]"
            app:showAsAction="never" />
        <item
            android:id="@+id/list_database"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="数据库遍历[输出至Logcat]"
            app:showAsAction="never" />
        <item
            android:id="@+id/remove_note"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/main_menu_delete"
            app:showAsAction="withText" />
    </group>
    <item
        android:id="@+id/main_menu_setting"
        android:icon="@drawable/ic_setting_24dp"
        android:title="@string/main_menu_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_menu_about"
        android:icon="@drawable/ic_about_24dp"
        android:title="@string/main_menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_menu_exit"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/main_menu_exit"
        app:showAsAction="never"/>
</menu>